# hasql-notifications

./: README.md  hasql-notifications.cabal  stack.yaml
.circleci/: build.sh  config.yml  lint.sh  setupenv.sh  test.sh
.github/workflows/: ci.yml
app/: Main.hs
src/Hasql/: Notifications.hs
test/Hasql/: NotificationsSpec.hs
