name:                hasql-notifications
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hasql-notifications#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hasql.Notifications
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.2
                     , text >= 1.2.3.1 && < 1.3
                     , hasql-pool >= 0.4 && < 0.6
                     , bytestring >= 0.10
                     , postgresql-libpq >= 0.9 && < 1.0
                     , hasql >= 0.19
                     , contravariant >= 1.5.2 && < 1.6

  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions: OverloadedStrings

executable hasql-notifications
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasql
                     , hasql-notifications
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

test-suite hasql-notifications-test
  type:                exitcode-stdio-1.0
  other-modules:       Hasql.NotificationsSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasql-notifications
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/hasql-notifications
